--- a/estilos/mediaqueries.css
+++ b/estilos/mediaqueries.css
@@ -44,6 +44,19 @@ section#hero{
     transition: 0.5s;
 }
 
+#conteudodestaque{
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    width: 450px;
+    margin-top: 50px;
+    margin-left: 70px;
+    font-weight: 400;
+    justify-content: space-evenly;
+    padding-left: 25px;
+    transition: 0.5s;
+}
+
 #conteudo > h1{
     font-size: 2.8em;
     transition: 0.5s;
@@ -63,16 +76,12 @@ button{
     height: 658px;
     background-color: white;
     display: flex;
-    position: relative;
     overflow: hidden;
     transition: 0.5s;
 }
 
 #sessaodestaque > img{
    height: 450px;
-   position: absolute; 
-   top: 12%;
-   left: 60%;
    z-index: 10;
    transition: 0.5s;
 }
@@ -185,6 +194,18 @@ section#hero{
     transition: 0.5s;
 }
 
+#conteudodestaque{
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    width: 450px;
+    margin-left: 70px;
+    font-weight: 400;
+    justify-content: space-evenly;
+    padding-left: 25px;
+    transition: 0.5s;
+}
+
 #conteudo > h1{
     font-size: 2.4em;
     transition: 0.5s;
@@ -202,28 +223,31 @@ button{
 
 #sessaodestaque{
     height: 758px;
-    background-color: white;
     display: flex;
-    flex-direction: column;
+    flex-direction: column !important;
     transition: 0.5s;
     justify-content: space-evenly;
+    align-items: center;
+    margin-top: -1px;
 }
 
 #sessaodestaque > img{
-   height: 400px;
+   height: 450px;
    transition: 0.5s;
+   width: 300px;
 }
 
-#sessaodestaque > #conteudo{
+#sessaodestaque > #conteudodestaque{
     width: 450px;
     transition: 0.5s;
+    margin-bottom: 50px;
 }
 
 #sessaocasas{
     display: flex;
     flex-direction: column;
-    background-color: white;
-    height: 700px;
+    background-color: pink;
+    height: 900px;
     align-items: center;
     justify-content: space-evenly;
 }
@@ -236,7 +260,7 @@ button{
     width: 85vw;
     transition: 0.5s;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
