--- a/estilos/style.css
+++ b/estilos/style.css
@@ -128,16 +128,28 @@ button{
     height: 658px;
     background-color: white;
     display: flex;
-    position: relative;
+    flex-direction: row;
+    justify-content: space-evenly;
+    margin-top: 100px;
     overflow: hidden;
+    transition: 0.5s;
+}
+
+#conteudodestaque{
+    display: flex;
+    flex-direction: column;
+    height: 400px;
+    width: 450px;
+    margin-top: 50px;
+    margin-left: 70px;
+    font-weight: 400;
+    justify-content: space-evenly;
+    padding-left: 25px;
     transition: 0.5s;
 }
 
 #sessaodestaque > img{
    height: 500px;
-   position: absolute; 
-   top: 12%;
-   left: 60%;
    z-index: 10;
    transition: 0.5s;
 }
